<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Chanu</string>
    <string name="gadget_title">Chanu Picture Frame</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="movie_view_label">Video player</string>
    <string name="loading_video">Loading video\u2026</string>
    <string name="loading_image">Loading image\u2026</string>
    <string name="loading_account">Loading account\u2026</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="loading">Loading\u2026</string>
    <string name="fail_to_load">Couldn\'t load</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="crop_save_text">OK</string>
    <string name="multiface_crop_help">Touch a face to begin.</string>
    <string name="saving_image">Saving picture\u2026</string>
    <string name="save_error">Couldn\'t save cropped image.</string>
    <string name="crop_label">Crop picture</string>
    <string name="select_image">Select photo</string>
    <string name="select_video">Select video</string>
    <string name="select_item">Select item(s)</string>
    <string name="select_album">Select album(s)</string>
    <string name="select_group">Select group(s)</string>
    <string name="set_image">Set picture as</string>
    <string name="wallpaper">Setting wallpaper\u2026</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="details_title">%1$d of %2$d items:</string>
    <string name="close">Close</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="no_such_item">Couldn\'t find item.</string>
    <string name="edit">Edit</string>
    <string name="activity_not_found">No app is available to complete the action.</string>
    <string name="process_caching_requests">Processing caching requests</string>
    <string name="caching_label">Caching\u2026</string>
    <string name="crop_action">Crop</string>
    <string name="set_as">Set as</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="group_by_location">By location</string>
    <string name="group_by_time">By time</string>
    <string name="group_by_tags">By tags</string>
    <string name="group_by_faces">By people</string>
    <string name="group_by_album">By album</string>
    <string name="group_by_size">By size</string>
    <string name="untagged">Untagged</string>
    <string name="no_location">No location</string>
    <string name="no_connectivity">Some locations couldn\'t be identified due to network problems.</string>
    <string name="sync_album_error">Failed to download the photos in this album. Please retry later.</string>
    <string name="sync_album_set_error">Failed to download the list of albums. Please retry later.</string>
    <string name="show_images_only">Images only</string>
    <string name="show_videos_only">Videos only</string>
    <string name="show_all">Images and videos</string>
    <string name="appwidget_title">Chanu Image Gallery</string>
    <string name="appwidget_empty_text">No images.</string>
    <string name="crop_saved">Cropped image saved to Downloads.</string>
    <string name="crop_not_saved">Cropped image wasn\'t saved.</string>
    <string name="no_albums_alert">No albums available.</string>
    <string name="empty_album">O images/videos available.</string>
    <string name="picasa_posts">Posts</string>
    <string name="make_available_offline">Make available offline</string>
    <string name="sync_picasa_albums">Refresh</string>
    <string name="done">Done</string>
    <string name="sequence_in_set">%1$d of %2$d items:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="try_to_set_local_album_available_offline">
        This item is stored locally and available offline.</string>
    <string name="set_label_all_albums">All albums</string>
    <string name="set_label_local_albums">Local albums</string>
    <string name="set_label_mtp_devices">MTP devices</string>
    <string name="set_label_picasa_albums">Picasa albums</string>
    <string name="free_space_format">%s free</string>
    <string name="size_below">%1$s or below</string>
    <string name="size_above">%1$s or above</string>
    <string name="size_between">%1$s to %2$s</string>
    <string name="Import">Import</string>
    <string name="import_complete">Import complete</string>
    <string name="import_fail">Import unsuccessful</string>
    <string name="camera_connected">Camera connected.</string>
    <string name="camera_disconnected">Camera disconnected.</string>
    <string name="click_import">Touch here to import</string>
    <string name="widget_type_album">Images from an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
    <string name="widget_type">Widget type</string>
    <string name="slideshow_dream_name">Slideshow</string>
    <string name="albums">Albums</string>
    <string name="times">Times</string>
    <string name="locations">Locations</string>
    <string name="people">People</string>
    <string name="tags">Tags</string>
    <string name="group_by">Group by</string>
    <string name="settings">Settings</string>
    <string name="add_account">Add account</string>

    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d item selected</item>
        <item quantity="one">%1$d item selected</item>
        <item quantity="other">%1$d items selected</item>
    </plurals>
    <!-- String indicating how many media album(s) is(are) selected
            eg. 1 album selected [CHAR LIMIT=30] -->
    <plurals name="number_of_albums_selected">
        <item quantity="zero">%1$d album selected</item>
        <item quantity="one">%1$d album selected</item>
        <item quantity="other">%1$d albums selected</item>
    </plurals>

    <!-- String indicating how many media group(s) is(are) selected
            eg. 1 group selected [CHAR LIMIT=30] -->
    <plurals name="number_of_groups_selected">
        <item quantity="zero">%1$d group selected</item>
        <item quantity="one">%1$d group selected</item>
        <item quantity="other">%1$d groups selected</item>
    </plurals>

    <string name="image_search_menu">Tineye</string>
    <string name="anime_image_search_menu">IQDB</string>
    <string name="web_image_button_download">Download</string>
    <string name="download_all_images_notice">You will be notified when download finishes</string>

</resources>
