<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_share"
            android:enabled="true"
            android:icon="@drawable/ic_menu_share_holo_light"
            android:showAsAction="never"
            android:title="@string/share"
            android:visible="true" />
    <item
            android:id="@+id/action_download"
            android:icon="@drawable/av_download"
            android:showAsAction="ifRoom"
            android:title="@string/web_image_button_download"
            android:visible="true" />

    <item
            android:id="@+id/action_slideshow"
            android:icon="@drawable/images_slideshow"
            android:showAsAction="never"
            android:title="@string/slideshow"
            android:visible="true" />
    <item
            android:id="@+id/action_edit"
            android:showAsAction="never"
            android:title="@string/edit"
            android:visible="true" />
    <item
            android:id="@+id/action_crop"
            android:showAsAction="never"
            android:title="@string/crop_action"
            android:visible="true" />
    <item
            android:id="@+id/action_details"
            android:icon="@drawable/social_chat"
            android:showAsAction="never"
            android:title="@string/details"
            android:visible="true" />
    <item
            android:id="@+id/action_setas"
            android:showAsAction="never"
            android:title="@string/set_image"
            android:visible="true" />
    <item
            android:id="@+id/image_search_menu"
            android:title="@string/image_search_menu"
            android:visible="true" />
    <item
            android:id="@+id/anime_image_search_menu"
            android:title="@string/anime_image_search_menu"
            android:visible="true" />
</menu>
